--- a/ReviewSite/index.html
+++ b/ReviewSite/index.html
@@ -84,6 +84,15 @@
               perfect for creative professionals. Because it comes with up to
               8TB, you can also pick and choose depending on your storage needs.
             </p>
+            <iframe
+              width="100%"
+              height="300"
+              src="https://www.youtube.com/embed/TOvb1uWNXN8"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </section>
           <section>
             <h3>Seagate Backup Plus - The Best Performance</h3>
@@ -98,6 +107,15 @@
               of mind thanks to Seagate's lower than average failure rates,
               especially in bigger capacity hard drives.
             </p>
+            <iframe
+              width="100%"
+              height="300"
+              src="https://www.youtube.com/embed/mnYuIFfkeMQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </section>
           <section>
             <h3>Samsung T5 SSD - The Best SSD</h3>
@@ -115,6 +133,15 @@
               doesn't have USB Type-C. Be prepared to shell out a bit more cash,
               but it's well worth it.
             </p>
+            <iframe
+              width="100%"
+              height="300"
+              src="https://www.youtube.com/embed/26yNPjr00RU"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </section>
         </section>
         <section id="conclusion">
